# kajiya

./: config.toml
crates/lib/ash-imgui/: Cargo.toml
crates/lib/ash-imgui/src/: lib.rs
crates/lib/kajiya/: Cargo.toml
crates/lib/kajiya-asset/: Cargo.toml
crates/lib/kajiya-asset-pipe/: Cargo.toml
crates/lib/kajiya-asset/src/: image.rs  import_gltf.rs
crates/lib/kajiya-backend/: Cargo.toml
crates/lib/kajiya-backend/src/: chunky_list.rs  file.rs  lib.rs  pipeline_cache.rs  rust_shader_compiler.rs  shader_compiler.rs
crates/lib/kajiya-backend/src/vulkan/: barrier.rs  buffer.rs  device.rs  error.rs  image.rs  instance.rs  mod.rs  profiler.rs  ray_tracing.rs  shader.rs  surface.rs  swapchain.rs
crates/lib/kajiya-imgui/: Cargo.toml
crates/lib/kajiya-imgui/src/: imgui_backend.rs
crates/lib/kajiya-rg/: Cargo.toml
crates/lib/kajiya-rg/src/: graph.rs  pass_api.rs  pass_builder.rs  renderer.rs  temporal.rs
crates/lib/kajiya-simple/: Cargo.toml
crates/lib/kajiya-simple/src/: input.rs  lib.rs  main_loop.rs
crates/lib/kajiya/src/: bindless_descriptor_set.rs  buffer_builder.rs  image_cache.rs  world_render_passes.rs  world_renderer.rs
crates/lib/kajiya/src/renderers/: ibl.rs
crates/lib/ngx_dlss/: Cargo.toml
crates/lib/rust-shaders/: Cargo.toml
crates/lib/rust-shaders-shared/: Cargo.toml
misc/metalness_norm/: Cargo.toml
misc/spatial_sample_gen/: Cargo.toml
