[package]
name = "kajiya-asset-pipe"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-asset = { path = "../kajiya-asset" }

anyhow = "1.0"
async-channel = "2.3"
async-executor = "1.4"
easy-parallel = "3.1"
env_logger = "0.11.8"
futures = "0.3"
glam = "0.30"
log = "0.4"
num_cpus = "1.13"
smol = "2.0.2"
turbosloth = { path = "/home/max/dev/turbosloth" }
