[package]
name = "kajiya-asset"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-backend = { path = "../kajiya-backend" }

anyhow = "1.0"
base64 = "0.22"
byteorder = "1.4"
bytes = "1.0"
ddsfile = "0.5"
glam = "0.30"
gltf = { git = "https://github.com/mwjrink/gltf", features = [
    "KHR_texture_transform",
    "KHR_materials_pbrSpecularGlossiness",
] } # no submodules
image = { version = "0.25.6", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
] }
intel_tex_2 = "0.4.0"
log = "0.4"
mikktspace = { git = "https://github.com/h3r2tic/mikktspace.git", branch = "master", default-features = false, features = [
    "glam",
] }
turbosloth = { path = "/home/max/dev/turbosloth" }
urlencoding = "2.1"
