[package]
name = "kajiya-backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu-profiler = { git = "https://github.com/h3r2tic/gpu-profiler.git", rev = "48f91055f012a4fb533403f655e4f81ad6f411b8", features = [
    "use-ash",
] }
anyhow = "1.0"
arrayvec = "0.7"
ash = "0.38"
ash-window = "0.13"
backtrace = "0.3"
byte-slice-cast = "1.2"
bytes = "1.0"
derive_builder = { version = "0.20", default-features = false, features = [
    "alloc",
] }
futures = "0.3"
glam = "0.30"
gpu-allocator = "0.27.0"
hassle-rs = "0.12"
hotwatch = "0.5"
lazy_static = "1.4"
log = "0.4"
nanoserde = "0.2"
normpath = "1.3"
parking_lot = "0.12"
puffin = "0.19.1"
raw-window-handle = "0.6"
relative-path = "2.0"
rspirv = "0.12" # note: patched over for latest RT
rspirv-reflect = { git = "https://github.com/h3r2tic/rspirv-reflect", rev = "77364f9" }
shader-prepper = "0.3.0-pre.1"
smol = "2.0.2"
thiserror = "2.0"
turbosloth = { path = "/home/max/dev/turbosloth" }
vk-sync = { path = "/home/max/dev/vk-sync-rs" }

[features]
#default = []
dlss = []
