[package]
name = "kajiya-imgui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }

imgui-winit-support = { version = "0.13", default-features = false }
ash-imgui = { path = "../ash-imgui" }
imgui = { version = "0.12" }
log = "0.4"
parking_lot = "0.12"
winit = "0.30"
