[package]
name = "kajiya-rg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-backend = { path = "../kajiya-backend" }

anyhow = "1.0"
arrayvec = "0.7"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
puffin = "0.19.1"
turbosloth = { path = "/home/max/dev/turbosloth" }
