[package]
name = "kajiya-simple"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }
kajiya-imgui = { path = "../kajiya-imgui", optional = true }

anyhow = "1.0"
glam = { version = "0.30", features = ["serde"] }
log = "0.4"
puffin = "0.19.1"
turbosloth = { path = "/home/max/dev/turbosloth" }
winit = "0.30"

puffin_http = { version = "0.16.1", optional = true }
imgui = { version = "0.12", optional = true }

[features]
dear-imgui = ["imgui", "kajiya-imgui"]
puffin-server = ["puffin_http"]
winit_serde = ["winit/serde"]
