[package]
name = "kajiya"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-asset = { path = "../kajiya-asset" }
kajiya-backend = { path = "../kajiya-backend" }
kajiya-rg = { path = "../kajiya-rg" }
rust-shaders-shared = { path = "../rust-shaders-shared" }

anyhow = "1.0"
array-init = "2.0.0"
blue-noise-sampler = "0.1"
bytemuck = "1.9.1"
chrono = "0.4"
exr = "1.4.1"
fern = { version = "0.7", features = ["colored"] }
glam = "0.30"
half = { version = "2.6.0", features = ["bytemuck"] }
image = { version = "0.25.6", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
] }
lazy_static = "1.4"
log = "0.4"
memmap2 = "0.9"
parking_lot = "0.12"
radiant = "0.3"
smol = "2.0.2"
turbosloth = { path = "/home/max/dev/turbosloth" }

ngx_dlss = { path = "../ngx_dlss", optional = true }
wchar = "0.11"

easy-parallel = "3.1.0"

[features]
default = []
dlss = ["ngx_dlss", "kajiya-backend/dlss"]
